--- a/styles/shop_style.css
+++ b/styles/shop_style.css
@@ -105,7 +105,7 @@ nav {
 	color: var(--clr-nav-shop);
 }
 
-@media screen and (min-width: 620px) {
+@media screen and (min-width: 38.750em) {
 	.top-left {
 		top: 10%;
 		left: 10%;
@@ -127,7 +127,7 @@ nav {
 	}
 }
 
-@media screen and (max-width: 619px) {
+@media screen and (max-width: 38.6875em) {
 	.top-left {
 		top: 10%;
 		left: 50%;
@@ -167,25 +167,25 @@ nav {
 	visibility: hidden;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 56.25em) {
 	.text-below-line {
-		font-size: 30px;
+		font-size: 1.875rem;
 	}
 }
 
-@media screen and (max-width: 899px) {
+@media screen and (max-width: 56.1875em) {
 	.text-below-line {
-		font-size: 25px;
+		font-size: 1.5625rem;
 	}
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 31.25em) {
 	.text-below-line {
-		font-size: 20px;
+		font-size: 1.25rem;
 	}
 }
 
-@media screen and (max-width: 475px) {
+@media screen and (max-width: 29.6875em) {
 	.text-below-line {
 		left: 50%;
 		transform: translateX(-50%);
