--- a/styles/xsl_style.css
+++ b/styles/xsl_style.css
@@ -1,10 +1,14 @@
+html {
+	overflow-x: hidden;
+}
+
 body {
 	width: min(65ch, 100%);
-  margin-inline: auto;
+	margin-inline: auto;
 }
 
 h1 {
-	font-size:22px;
+	font-size:1.375rem;
 }
 
 h1 {
@@ -32,7 +36,7 @@ h4 {
 	max-width:93%;
 	height:auto;
 	z-index:1;
-	font-size:29px;
+	font-size:1.8125rem;
 }
 #MainContent {
 	position:relative;
@@ -41,8 +45,9 @@ h4 {
 	width:600px;
 	margin:0px auto;
 	z-index:2;
-	font-size:15px;
+	font-size:0.9375rem;
 	line-height:150%;
+  overflow-wrap: anywhere;
 }
 
 body.light #MainContent {
@@ -52,7 +57,7 @@ body.dark #MainContent {
 	color:var(--clr-blog-darkmode);
 }
 
-@media screen and (max-height: 760px) {
+@media screen and (max-height: 47.5em) {
 	#MainContent.notop {
 		top:0px;
 	}
@@ -72,7 +77,11 @@ video {
 }
 figure{
 	max-width:100%;
+	max-height: 100%;
 	margin-top:30px;
+	margin-left: clamp(0rem, 4vw - 1rem, 2.2rem);
+	margin-right: clamp(0rem, 4vw - 1rem, 2.2rem);
+	text-align: center;
 }
 .embed-container {
 	position: relative;
@@ -106,12 +115,12 @@ table {
 td a{
 	text-decoration:none;
 }
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 26.875em) {
 	td {
 		display:block;
 	}
 }
-@media screen and (min-width: 431px) {
+@media screen and (min-width: 26.9375em) {
 	.center-if-wide {
 		text-align:center;
 	}
